# casual-pre-loader

./: .gitattributes  .gitignore  .gitmodules  404.html  README.md  READ_THIS.txt  RUNME.bat  TODO.md  app.py  build.py  color_shift.py  colorchange.py  colorchanger.py  comparepcf.py  config.yaml  counter.py  diff_check.py  file_merge.py  findflame.py  generate.py  gui.py  index.html  main.py  mkdocs.yml  mod_urls.json  particle_system_map.json  pattern_match.py  pcf_filepath_buffer.py  pcf_filepath_modifier.py  pcf_merge.py  pcf_space.py  pcfcodec.py  pcfdecode.py  pyproject.toml  recommended.txt  requirements.txt  sitemap.xml  space_saver.py  stringsearch.py  team_color_shift.py  (+3 more)
.github/: dependabot.yml
backup/: backup_manager.py  info.vdf
codec/: __init__.py  codec.py  reader.py  writer.py
core/: are_we_portable.py  args.py  auto_updater.py  backup_manager.py  config.py  constants.py  download_mods.py  errors.py  folder_setup.py  migrations.py  particle_splits.py  profile.py  settings.py  structure_validator.py  traversal.py  types.py  updater.bat  updater.c  utils.py  version.py
data/: mod_urls.json  particle_system_map.json
doc/: .macros.py  faq.md  how_it_works.md  howwork.md  index.md  mkdocs.yml  troubleshooting.md  tutorial.md
faq/: index.html
gui/: addon_details.py  addon_manager.py  addon_panel.py  addons_manager.py  conflict_matrix.py  dialogs.py  drag_and_drop.py  first_time_setup.py  install_controller.py  installation.py  interface.py  load_order_panel.py  main_window.py  mod_descriptor.py  mod_drop_zone.py  preset_customizer.py  preset_descriptor.py  profile_dialog.py  progress.py  settings_manager.py  setup.py  theme.py  update_dialog.py
gui_stuff/: interface.py
handlers/: file_handler.py  pcf_handler.py  vpk_handler.py
howwork/: index.html
models/: attributes.py  color_wheel.py  element.py  pcf_file.py  vpk_file.py
not_used_but_interesting/: color_range.py  generate_offsets.py  hash_patch.py  hex_dump.py  pcf_diff_check.py  pcf_merge.py
operations/: advanced_particle_merger.py  color.py  decal_merge.py  detectors.py  file_processors.py  for_the_love_of_god_add_vmts_to_your_mods.py  game_type.py  pcf_compress.py  pcf_merge.py  pcf_rebuild.py  vgui_preload.py  vmt_wasted_space.py  vpk.py
parsers/: pcf_file.py  vpk_file.py
quickprecache/: QuickPrecache.vpk  _QuickPrecache.vpk  precache_list.py  quick_precache.py  r_rootlod.py  studio_mdl.py
scripts/: RUNME.bat  analyze_particle_hierarchy.py  build.py  particle_file_merger.py  run.sh
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  pytest.ini  test_config.py
tools/: advanced_particle_merger.py  backup_manager.py  color_wheel.py  generate_offsets.py  pcf_squish.py  (+2 more)
(+152 files in other folders)
